k8s/apps/mahiron/lily/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mahiron
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
