k8s/apps/mahiron/lily/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  type: ClusterIP
  ports:
    - name: "40772"
      port: 40772
      targetPort: 40772
      protocol: TCP
